# labzero-example

./: .env.example  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml  tailwind.config.js  webpack.mix.js
.docker/: devdb.sh
.render/: run.sh
scripts/: devdb.py
src/myapp/: settings.py  urls.py  views.py  wsgi.py
src/myapp/templates/: base.html  index.html
src/myapp/templatetags/: custom_filters.py
src/myapp/tests/: conftest.py  test_app.py
sub-src/myapp_cli/: setup.py
sub-src/myapp_cli/myapp_cli/: __init__.py
